Fixed spacing for h4

--- a/assets/themes/jiku/css/style.css
+++ b/assets/themes/jiku/css/style.css
@@ -22,6 +22,10 @@ h1, h2, h3 {
 	margin-top: 1.5em;
 	margin-bottom: 1.5em;
 }
+h4 {
+	margin-top: 1.3em;
+	margin-bottom: 1.3em;
+}
 
 h1, h2, h3, h4, header, div.sidebar {
 	font-family: Lato, "Helvetica Neue", sans-serif;
